--- a/index.html
+++ b/index.html
@@ -22,9 +22,40 @@
 
 <body>
     <!--header-->
-    <header class="home">
+    <header class="home" id="home">
         <!--navbar-->
-        <nav></nav>
+        <nav class="navbar ">
+            <div class="nav-center">
+                <!--nav header-->
+                <div class="nav-header">
+                    <img src="./images/logo.svg" class="nav-logo" alt="backroads">
+                    <button type="button" class="nav-toggle" id="nav-toggle" aria-label="nav toggler">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                </div>
+                <!--end of nav header-->
+                <!--nav links-->
+                <div class="nav-links" id="nav-links">
+                    <a href="#home" class="nav-link scroll-link">home</a>
+                    <a href="#about" class="nav-link scroll-link">about</a>
+                    <a href="#services" class="nav-link scroll-link">services</a>
+                    <a href="#featured" class="nav-link scroll-link">featured</a>
+                    <a href="#gallery" class="nav-link scroll-link">gallery</a>
+                </div>
+                <!--end of nav links-->
+                <!--nav icons-->
+                <div class="nav-icons">
+                    <a href="https://www.facebook.com/gunda.sen.35/?viewas=&should_open_composer=false&show_switched_toast=false&show_invite_to_follow=false&show_switched_tooltip=false&show_podcast_settings=false&show_community_transition=false&show_community_review_changes=false"
+                        target="_blank" class="nav-icon"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.twitter.com" target="_blank" class="nav-icon"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" class="nav-icon"><i
+                            class="fab fa-instagram"></i></a>
+                </div>
+                <!--end of nav icons-->
+            </div>
+
+        </nav>
         <!--hero component-->
         <div class="hero">
             <div class="hero-banner">
@@ -32,7 +63,7 @@
                 <p class="hero-text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, consectetur quasi. Tempore.
                 </p>
-                <a href="#featured" class="btn-white">explore tours</a>
+                <a href="#featured" class="btn-white scroll-link">explore tours</a>
             </div>
         </div>
     </header>
@@ -291,14 +322,43 @@
             <h2 class="title">hot <span class="subtitle">deals</span></h2>
         </div>
         <!--end of title-->
-        <form>
+        <form action="https://formspree.io/f/mgedwgej" method="POST">
             <div class="input-group">
-                <input type="email" class="form-control" placeholder="your email">
+                <input type="email" name="email" class="form-control" placeholder="your email">
                 <button type="submit" class="btn-submit">submit</button>
             </div>
         </form>
     </section>
     <!--end of deals-->
+    <!--footer-->
+    <footer class="section footer">
+        <!--footer links-->
+        <div class="footer-links">
+            <a href="#home" class="footer-link scroll-link">home</a>
+            <a href="#about" class="footer-link scroll-link">about</a>
+            <a href="#services" class="footer-link scroll-link">services</a>
+            <a href="#featured" class="footer-link scroll-link">featured</a>
+            <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </div>
+        <!--end of footer links-->
+        <!--footer icon-->
+        <div class="footer-icons">
+            <a href="https://www.facebook.com/gunda.sen.35/?viewas=&should_open_composer=false&show_switched_toast=false&show_invite_to_follow=false&show_switched_tooltip=false&show_podcast_settings=false&show_community_transition=false&show_community_review_changes=false"
+                target="_blank" class="footer-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank" class="footer-icon"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank" class="footer-icon"><i class="fab fa-instagram"></i></a>
+        </div>
+        <!--end of footer icons-->
+        <!--copyright-->
+        <p class="copyright">
+            copyright &copy; backroad travel tours company <span id="date"></span>. all rights reserved
+        </p>
+        <!--end of copyright-->
+
+    </footer>
+    <!--end of footer-->
+    <!--javascript-->
+    <script src="./js/app.js"></script>
 
 </body>
 
